[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/environment/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://src/enemy/base_enemy.gd" type="Script" id=2]
[ext_resource path="res://src/enemy/states/idle.gd" type="Script" id=3]
[ext_resource path="res://src/utils/state_machine.gd" type="Script" id=4]
[ext_resource path="res://src/enemy/states/attack.gd" type="Script" id=5]
[ext_resource path="res://src/enemy/states/chase.gd" type="Script" id=6]
[ext_resource path="res://src/enemy/states/follow.gd" type="Script" id=7]
[ext_resource path="res://src/enemy/states/_movement.gd" type="Script" id=8]
[ext_resource path="res://src/enemy/states/die.gd" type="Script" id=9]
[ext_resource path="res://src/enemy/states/search.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 22 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="CircleShape2D" id=3]
radius = 2.0

[node name="BaseEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
collision/safe_margin = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 164, 87, 48, 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 1 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 50, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state_path = NodePath("Movement/Idle")

[node name="Movement" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Idle" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 3 )

[node name="Follow" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 7 )

[node name="Chase" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 6 )

[node name="Search" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 10 )

[node name="Attack" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 5 )

[node name="Die" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 9 )

[node name="Line2D" type="Line2D" parent="."]
width = 4.0

[node name="StateLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource( 2 )

[node name="StopArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopArea"]
visible = false
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="StopArea" to="." method="_on_StopArea_body_entered"]
[connection signal="body_exited" from="StopArea" to="." method="_on_StopArea_body_exited"]
